examples/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-pages
  labels:
    name: gitea-pages
